--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,23 @@
 [versions]
 activity-compose = "1.8.1"
-agp = "8.1.4"
+agp = "8.2.0"
 androidx-lifecycle = "2.6.2"
 androidx-navigation = "2.7.5"
-coil = "2.4.0"
+coil = "2.5.0"
 compose-bom = "2023.10.01"
 core-ktx = "1.12.0"
 ksp = "1.9.20-1.0.14"
-okhttp = "4.11.0"
+okhttp = "4.12.0"
 org-jetbrains-kotlin-android = "1.9.20"
 org-jetbrains-kotlin-plugin-serialization = "1.9.0"
-org-jetbrains-kotlinx-serialization-json = "1.5.1"
+org-jetbrains-kotlinx-serialization-json = "1.6.2"
 retrofit = "2.9.0"
 retrofit-kotlinx-serialization-converter = "1.0.0"
-room = "2.6.0"
-koin = "3.4.3"
-koin_compose = "1.0.4"
+room = "2.6.1"
 androidx-datastore = "1.0.0"
-material3-compose = "1.2.0-alpha11"
+material3-compose = "1.2.0-alpha12"
 paging = "3.2.1"
+youtubeplayer= "12.1.0"
 
 [libraries]
 activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
@@ -29,6 +28,7 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 lifecycle-viewModel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3-compose" }
+material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended"}
 navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidx-navigation"}
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
@@ -40,10 +40,9 @@ ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin"}
-datastore = {group = "androidx.datastore", name = "datastore", version.ref = "androidx-datastore" }
 paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging"}
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging"}
+youtubeplayer = { group = "com.pierfrancescosoffritti.androidyoutubeplayer", name = "core", version.ref = "youtubeplayer"}
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
