--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,21 @@
 [versions]
-activity-compose = "1.8.1"
+activity-compose = "1.8.2"
 agp = "8.2.0"
 androidx-lifecycle = "2.6.2"
-androidx-navigation = "2.7.5"
+androidx-navigation = "2.7.6"
 coil = "2.5.0"
 compose-bom = "2023.10.01"
 core-ktx = "1.12.0"
-ksp = "1.9.20-1.0.14"
+ksp = "1.9.21-1.0.15"
 okhttp = "4.12.0"
-org-jetbrains-kotlin-android = "1.9.20"
+org-jetbrains-kotlin-android = "1.9.21"
 org-jetbrains-kotlin-plugin-serialization = "1.9.0"
 org-jetbrains-kotlinx-serialization-json = "1.6.2"
 retrofit = "2.9.0"
 retrofit-kotlinx-serialization-converter = "1.0.0"
 room = "2.6.1"
 androidx-datastore = "1.0.0"
-material3-compose = "1.2.0-alpha12"
+material3-compose = "1.2.0-beta01"
 paging = "3.2.1"
 youtubeplayer= "12.1.0"
 
