--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ androidx-datastore = "1.0.0"
 material3-compose = "1.2.0-beta01"
 paging = "3.2.1"
 youtubeplayer= "12.1.0"
+animation-graphics-android = "1.6.0-beta03"
 
 [libraries]
 activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
@@ -43,6 +44,7 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging"}
 paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging"}
 youtubeplayer = { group = "com.pierfrancescosoffritti.androidyoutubeplayer", name = "core", version.ref = "youtubeplayer"}
+animation-graphics-android = { group = "androidx.compose.animation", name = "animation-graphics-android", version.ref = "animation-graphics-android" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
