--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 activity-compose = "1.8.2"
-agp = "8.2.1"
+agp = "8.2.2"
 androidx-lifecycle = "2.7.0"
 androidx-navigation = "2.7.6"
 coil = "2.5.0"
-compose-bom = "2023.10.01"
+compose-bom = "2024.01.00"
 core-ktx = "1.12.0"
 ksp = "1.9.22-1.0.17"
 okhttp = "4.12.0"
@@ -15,10 +15,10 @@ retrofit = "2.9.0"
 retrofit-kotlinx-serialization-converter = "1.0.0"
 room = "2.6.1"
 androidx-datastore = "1.0.0"
-material3-compose = "1.2.0-beta02"
+material3-compose = "1.2.0-rc01"
 paging = "3.2.1"
 youtubeplayer= "12.1.0"
-animation-graphics-android = "1.6.0-rc01"
+animation-graphics-android = "1.6.0"
 
 [libraries]
 activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
