--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,10 +19,8 @@ material3-compose = "1.2.0-rc01"
 paging = "3.2.1"
 youtubeplayer= "12.1.0"
 animation-graphics-android = "1.6.0"
-hilt-plugin = "2.50"
-hilt-android = "2.48.1"
-hilt-kapt = "2.47"
-
+hilt = "2.50"
+hilt-navigation = "1.1.0"
 [libraries]
 activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
@@ -49,14 +47,14 @@ paging-compose = { group = "androidx.paging", name = "paging-compose", version.r
 youtubeplayer = { group = "com.pierfrancescosoffritti.androidyoutubeplayer", name = "core", version.ref = "youtubeplayer"}
 animation-graphics-android = { group = "androidx.compose.animation", name = "animation-graphics-android", version.ref = "animation-graphics-android" }
 datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidx-datastore" }
-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android"}
-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt-kapt"}
-
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt"}
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt"}
+hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation"}
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
 org-jetbrains-kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "org-jetbrains-kotlin-plugin-serialization" }
-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt-plugin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
 [bundles]
