--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,9 +2,9 @@
 activity-compose = "1.8.2"
 agp = "8.2.2"
 androidx-lifecycle = "2.7.0"
-androidx-navigation = "2.7.6"
+androidx-navigation = "2.7.7"
 coil = "2.5.0"
-compose-bom = "2024.01.00"
+compose-bom = "2024.02.00"
 core-ktx = "1.12.0"
 ksp = "1.9.22-1.0.17"
 okhttp = "4.12.0"
@@ -15,12 +15,12 @@ retrofit = "2.9.0"
 retrofit-kotlinx-serialization-converter = "1.0.0"
 room = "2.6.1"
 androidx-datastore = "1.0.0"
-material3-compose = "1.2.0-rc01"
 paging = "3.2.1"
 youtubeplayer= "12.1.0"
-animation-graphics-android = "1.6.0"
+animation-graphics-android = "1.6.1"
 hilt = "2.50"
 hilt-navigation = "1.1.0"
+
 [libraries]
 activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
@@ -29,7 +29,7 @@ core = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "org-jetbrains-kotlinx-serialization-json" }
 lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 lifecycle-viewModel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3-compose" }
+material3 = { group = "androidx.compose.material3", name = "material3" }
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended"}
 navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidx-navigation"}
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
@@ -50,6 +50,7 @@ datastore = { group = "androidx.datastore", name = "datastore-preferences", vers
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt"}
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt"}
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation"}
+
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
